--- a/EasyPermission/Base.lproj/Main.storyboard
+++ b/EasyPermission/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +13,10 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xSO-eX-r4h"/>
+                        <viewControllerLayoutGuide type="bottom" id="GFK-wh-R6V"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -29,12 +32,11 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="g2L-z1-fcp" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="H0E-do-LNx"/>
-                            <constraint firstItem="g2L-z1-fcp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="c0b-30-euO"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="g2L-z1-fcp" secondAttribute="bottom" id="l8N-f2-fxg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="g2L-z1-fcp" secondAttribute="trailing" id="qVP-Eh-rWY"/>
+                            <constraint firstItem="g2L-z1-fcp" firstAttribute="top" secondItem="xSO-eX-r4h" secondAttribute="bottom" id="H0E-do-LNx"/>
+                            <constraint firstItem="g2L-z1-fcp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="c0b-30-euO"/>
+                            <constraint firstItem="GFK-wh-R6V" firstAttribute="top" secondItem="g2L-z1-fcp" secondAttribute="bottom" id="l8N-f2-fxg"/>
+                            <constraint firstAttribute="trailing" secondItem="g2L-z1-fcp" secondAttribute="trailing" id="qVP-Eh-rWY"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
                         <outlet property="permissionTableView" destination="g2L-z1-fcp" id="14R-qe-ufK"/>
